--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "express": "^4.16.4",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.0",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "validator": "^10.10.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
